--- a/c1.html
+++ b/c1.html
@@ -42,7 +42,7 @@
     <section class="formacao"> <!-- Seção de formação acadêmica -->
         <h2>Formação Acadêmica</h2>
         <ul>
-            <li>Graduanda em Engenharia de Software - Universidade de Vassouras, conclusão em 2027</li>
+            <li>Graduando em Engenharia de Software - Universidade de Vassouras, conclusão em 2027</li>
         </ul>
     </section>
 
